@@ -1,5 +1,9 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.561 2006/02/08 03:25:24 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.562 2006/02/08 18:59:12 rocket Exp $
+
+  08 Feb 2006; Eric Edgar <rocket@gentoo.org>
+  modules/generic_stage_target.py:
+  fix kernelopts and extraversion env variable exports
 
   08 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   targets/support/livecdfs-update.sh:
